# pyspharm

./: .gitignore  LICENSE.spherepack  MANIFEST.in  ProjectHome.md  README  README.md  asv.conf.json  create_docs.sh  meson.build  pyproject.toml  setup.cfg  setup.py  windows_installer.py
Lib/: __init__.py  spharm.py
benchmarks/: benchmarks.py
examples/: 2layer.py  2levelturb.py  README  galewskyetal_testcase.py  geodesic.py  regrid_test.py  spharmonic.py  twolayer.py  twolevel.py
html/: api-objects.txt  class-tree.html  frames.html  help.html  identifier-index.html  index.html  module-tree.html  spharm.spharm-module.html  spharm.spharm-pysrc.html  spharm.spharm.Spharmt-class.html  toc-spharm.spharm-module.html
src/: alf.f  invlap.f  lap.f  onedtotwod_vrtdiv.f  twodtooned.f  twodtooned_vrtdiv.f
tests/: test_array_api.py  test_hypothesis.py  test_spharm.py
trunk/: MANIFEST.in  README  setup.py
trunk/Lib/: __init__.py  spharm.py
trunk/examples/: 2layer.py  2levelturb.py  FortranFormat.py  README  galewskyetal_testcase.py  geodesic.py  regrid_test.py  shallow_test.py  spharmonic.py  twolayer.py  twolevel.py
trunk/html/: api-objects.txt  class-tree.html  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  spharm.spharm-module.html  spharm.spharm-pysrc.html  spharm.spharm.Spharmt-class.html  toc-everything.html  toc.html
trunk/src/: _spherepack.pyf  getlegfunc.f  multsmoothfact.f  onedtotwod.f  specintrp.f  twodtooned_vrtdiv.f
