[build-system]
requires = ["meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = "pyspharm"
version = "1.0.9"
description = "Python Spherical Harmonic Transform Module"
authors = [
    { name = "Jeff Whitaker", email = "jeffrey.s.whitaker@noaa.gov" }
]
readme = "README.md"
license = { file = "LICENSE.spherepack" }
classifiers = [
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [ "numpy" ]

[project.urls]
Homepage = "http://github.com/jswhit/pyspharm"
Repository = "https://github.com/jswhit/pyspharm"

[project.optional-dependencies]
tests = ["pytest", "hypothesis[numpy]"]
examples = ["basemap", "matplotlib"]

[tool.setuptools]
packages = [ "spharm" ]
package-dir = { spharm = "Lib" }
