[build-system]
requires = ["meson-python", "numpy"]
build-backend = "mesonpy"

[project]
name = "pyspharm"
version = "1.0.9"
description = "Python Spherical Harmonic Transform Module"
authors = [
    { name = "Jeff Whitaker", email = "jeffrey.s.whitaker@noaa.gov" }
]
readme = "README.md"
license = { file = "LICENSE.spherepack" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [ "numpy" ]
keywords = ["spherical harmonic transform"]
requires-python = ">=3.8"

[project.urls]
Homepage = "http://github.com/jswhit/pyspharm"
Repository = "https://github.com/jswhit/pyspharm"

[project.optional-dependencies]
examples = ["basemap", "matplotlib"]
benchmarks = ["asv", "virtualenv", "pip"]
tests = ["pytest", "hypothesis[numpy]"]

[tool.setuptools]
packages = [ "spharm" ]
package-dir = { spharm = "Lib" }
